fix(spinner): make host inline-block & svg block to remove bottom gap and enable vertical centering

--- a/packages/core/src/components/spinner/spinner.scss
+++ b/packages/core/src/components/spinner/spinner.scss
@@ -2,26 +2,26 @@
 
 /* Component variables aka overrides */
 :root {
-  --spinner-background-inverted: rgba(255, 255, 255, 1);
+  --spinner-background-inverted: rgb(255 255 255 / 100%);
 }
 
 :root,
 .scania,
 .scania .tds-mode-light {
-  --spinner-background: rgba(43, 112, 211, 1);
+  --spinner-background: rgb(43 112 211 / 100%);
 }
 
 .scania .tds-mode-dark {
-  --spinner-background: rgba(74, 137, 243, 1);
+  --spinner-background: rgb(74 137 243 / 100%);
 }
 
 .traton,
 .traton .tds-mode-light {
-  --spinner-background: rgba(0, 72, 82, 1);
+  --spinner-background: rgb(0 72 82 / 100%);
 }
 
 .traton .tds-mode-dark {
-  --spinner-background: rgba(194, 191, 182, 1);
+  --spinner-background: rgb(194 191 182 / 100%);
 }
 
 /* Component variables */
@@ -44,10 +44,12 @@
 :host {
   @include tds-box-sizing;
 
-  display: block;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .tds-spinner-svg {
+  display: block;
   width: calc(var(--spinner-radius) * 2);
   height: calc(var(--spinner-radius) * 2);
   transform: scale(-1, 1) rotate(-90deg);
